프랑스/벨기에 추가 번역

--- a/localisation/bel_focus_l_english.yml
+++ b/localisation/bel_focus_l_english.yml
@@ -82,7 +82,7 @@
  BEL_declare_neutrality_desc:0 "Twenty years ago we learned the price of war. We counted it in bodies, in the blood of men, women, and children, in the years of struggle and torment, in the decades of rebuilding, in the mained and crippled who still linger amoung us. Until war comes to us, we must avoid at all cost, provoking it." 
  BEL_expansionism:0 "팽창주의"
  BEL_expansionism_desc:0 "Europe is currently catching fire. We should take advantage of this. No more will we be considered a sidenote in Europe. We shall rise to prominence!"
- BEL_invite_germany:0 "Eastern Reapproachment"
+ BEL_invite_germany:0 "동부 재접촉"
  BEL_invite_germany_desc:0 "Though little love exists in our nation for the Germans or Russians, the unfortunate reality of the situation must be recognised. France is a fading power and the British, though they fought for us once, look every day more uneasy with the European situation. With German reunification, we must approach either of those two nations."
  BEL_ally_luxemburg:0 "룩셈부르크와의 동맹"
  BEL_ally_luxemburg_desc:0 "By allying Luxembourg we can ensure some extra troops in our defense, as well as a somewhat larger front to hold, making offensive operations against us require more manpower. This will give any other nations at war with our enemy the opportunity to push further or hold longer."
@@ -90,7 +90,7 @@
  BEL_take_luxemburg_desc:0 "Luxembourg is a shadow of its former self. It should be removed as the pimple on the European map that it is."
  BEL_demand_french_flanders:0 "프랑스령 플란데런 요구"
  BEL_demand_french_flanders_desc:0 "French Flanders is a historical part of the United Provinces. Reclaim it for Belgium and unite the two Flanders!"
- BEL_greater_netherlands:0 "Embrace the Dietsland Vision"
+ BEL_greater_netherlands:0 "디츨란트 비전 수용"
  BEL_greater_netherlands_desc:0 "Historically speaking, the Benelux region spoke many different dialects called 'Dietsen'. We should embrace this common history and form a united land of Dietsen!"
  BEL_french_flanders:0 "프랑스령 플란데런"
  BEL_french_flanders_desc:0 "The region of Pas de Calais also known as the French Flanders is a territory populated by our fellow Belgians. We need this land to achieve the Greater Belgium!"
@@ -166,27 +166,27 @@
  BEL_war_ENG_desc:0 "The time to end British dominion over their vast colonial territories is here! Death to the Empire!"
  BEL_war_FRA:0 "프랑스 개입"
  BEL_war_FRA_desc:0 "The French continue to act as the boss of Western Europe. Show them how wrong they are!"
- BEL_budget:0 "Redistribute National Budget"
+ BEL_budget:0 "국가예산 재분배"
  BEL_budget_desc:0 "The current distribution of the national budget does not favor our goals. We have to draft another plan to improve this situation!"
- BEL_industri:0 "Industrial Powerhouse"
+ BEL_industri:0 "산업 강국"
  BEL_industri_desc:0 "We have the potential to become a much bigger industrial power than we currently are. We have to improve our industry for the sake of our nation."
- BEL_milit_effort:0 "La Fabrique Nationale"
- BEL_milit_effort_desc:0 "By establishing a factory-company in Herst we can greatly increase our potential small arms production."
- BEL_civil_effort:0 "John Cockerill Company"
+ BEL_milit_effort:0 "국립공장"
+ BEL_milit_effort_desc:0 "에르스탈에 공장 회사를 설립함으로써 우리는 우리의 잠재적인 소화기 생산을 크게 늘릴 수 있습니다."
+ BEL_civil_effort:0 "존 코커릴 컴퍼니"
  BEL_civil_effort_desc:0 "Entrepeneur John Cockerill formed a company that proved important for Belgian industrial development. Expanding said company will help our efforts."
- BEL_dockyard_effort:0 "Expand the Antwerp Water Works"
- BEL_dockyard_effort_desc:0 "We are surrounded by naval powers. We need to quickly increase our naval assets to keep up with them."
- BEL_armed_forces:0 "La Défense"
- BEL_armed_forces_desc:0 "Belgium is a strategic location for any country wishing to flank another country through our lands. We need to show the world we are not to be messed with and increase the size of our army."
+ BEL_dockyard_effort:0 "안트베르펜 수도 확장"
+ BEL_dockyard_effort_desc:0 "우리는 해군 강국에 둘러싸여 있습니다. 해군 자산을 빨리 늘려야 뒤처지지 않습니다."
+ BEL_armed_forces:0 "라데팡스"
+ BEL_armed_forces_desc:0 "벨기에는 우리 땅을 통해 다른 나라와 어깨를 나란히 하고자 하는 어떤 나라든 전략적 요충지입니다. 우리는 우리가 혼란에 빠지지 않는다는 것을 세계에 보여주고 우리 군대의 규모를 늘려야 합니다."
  BEL_slot_1:0 "Fund Vrije Universiteit Brussel"
  BEL_slot_1_desc:0 "The VUB will provide us with many great young minds to improve our current technology."
- BEL_new_doctrines:0 "New Means of War"
- BEL_new_doctrines_desc:0 "The time has come to decide how we wish to wage war."
- BEL_inf_effort:0 "New Infantry Equipment"
+ BEL_new_doctrines:0 "전쟁의 새 방법"
+ BEL_new_doctrines_desc:0 "우리가 전쟁을 어떻게 하기를 원하는지 결정할 때가 왔습니다."
+ BEL_inf_effort:0 "새 보병 장비"
  BEL_inf_effort_desc:0 "Infantry is still the backbone of any fighting force. They need to have the best equipment possible to make a change."
  BEL_air_force:0 "Force Aérienne Belge"
  BEL_air_force_desc:0 "Though we were early adopters of the aeroplane as a weapon of war, the last two decades have seen few real improvements which our military leaders have had the interest, or funds to persue. This must change."
- BEL_new_navy:0 "La Marine Royale"
+ BEL_new_navy:0 "왕립해군"
  BEL_new_navy_desc:0 "Naval technology is advancing rapidly. We need to decide what type of ships we will focus on."
  BEL_complete_reform:0 "육군 개혁 완료"
  BEL_complete_reform_desc:0 "Despite considerable resistance from both within and without our military, reforms are finally beginning to bear fruit. Though innovation must continue, we can begin wrapping up the most ambitious of these enterprises."
@@ -202,7 +202,7 @@
  BEL_AA_effort_desc:0 "Though the axiom 'The bomber will always get through' is oft-quoted, it is trueism we intend to put lie to. By mustering local resources and forming civil defense organisations based around civilian-served, army-directed anti-aircraft artillery, as well as constructing air-raid shelters, we can largely protect our nation from aerial bombardment."
  BEL_memory_albert:0 "호나우르 알버르트의 유산"
  BEL_memory_albert_desc:0 "Rarely throughout history are a people blessed by a ruler such as Albert the First. The soldier king, who devoted all he was and had to the nation in war and then all his remaining life to it's rebuilding, is responsible alone for the monarchists at all. Stemming extremism, giving pause to fanatics, the patient, fatherly love of our passed monarch unites us. Lepold III would do well to follow his example."
- BEL_slot_2:0 "Scientific Nexus"
+ BEL_slot_2:0 "과학의 중심"
  BEL_slot_2_desc:0 "By establishing Belgium as a calm, neutral hub, we can attract the upper crust of the European scientific community fleeing the collapsing nations around us."
  BEL_fighter_factories:0 "Expand Stampe et Vertongen"
  BEL_fighter_factories_desc:0 "Though established in 1922, the Antwerp-based Stampe et Vertongen has seen little government investment, and slim pickings on an international market dominated by Hawker, Heinkle, and Curtiss-Wright. By purposefully directing funds into the firm, we can expand domestic capacity for aircraft production."
@@ -210,34 +210,34 @@
  BEL_Vlaanderen_mines_desc:0 "Though the low countries have traditionally been limited in their mining industry by a high water-table, the regions east of Brussels contain considerable, if difficult-to-access bauxite deposits. Difficult, until now anyways."
  BEL_Cas_effort:0 "Composante Air"
  BEL_Cas_effort_desc:0 "As we continue to build-up our forces, we must face the disquieting reality of industrial capacity. Even if every reasonable effort were made, we could not maintain command of our own skies against an industrial power the likes of France or a re-united Germany. Instead, efforts must be directed to ensuring that the brief windows of air superiority we can obtain are well used for ground support."
- BEL_blue_navy:0 "An Oceangoing Fleet"
+ BEL_blue_navy:0 "대양함대"
  BEL_blue_navy_desc:0 "At the end of the last war, our navy was offically disbanded, the assumption being that our naval defense was secured by our erstwhile protectors and allies. Though we have begun to correct this grave error of judgement, we yet lack the naval capacity to protect our trade-routes and colonial holdings. If we are to make good this glaring deficiency in our defense, we must build a blue-water navy."
- BEL_mil_final:0 "A Nation at Arms"
+ BEL_mil_final:0 "무기의 나라"
  BEL_mil_final_desc:0 "Though the last war left us a nation battered, it also left undeniably unbeaten. Our long history is one of stubborn, and eventually insurmountable resistance to foreign invaders. In it's nearing, darkest hour, we shall show the world that tiny Belgium has yet some fight left in her."
  BEL_higher_taxes_idea:0 "인상된 세금"
  BEL_lower_taxes_idea:0 "인하된 세금"
  BEL_secular_education_idea:0 "세속적 교육"
  BEL_devalue_currency_idea:0 "평가절하된 통화"
- BEL_boerenbund:0 "Boerenbond"
+ BEL_boerenbund:0 "부렌본트"
  BEL_40h_week_idea:0 "주 40시간 근무"
- BEL_investments:0 "Coroporative Investments"
- BEL_youth_army:0 "The Youth Bond"
- BEL_army_nation:0 "A Nation for the Army"
- BEL_bulwark:0 "Belgian Economic Miracle"
- BEL_welfare:0 "The Welfare State"
- BEL_council:0 "The Economic Council"
- BEL_national_ind:0 "Nationalised Industry"
- BEL_small:0 "Booming Small Buisnesses"
+ BEL_investments:0 "기업 투자"
+ BEL_youth_army:0 "청년 동맹"
+ BEL_army_nation:0 "군대를 위한 국가"
+ BEL_bulwark:0 "벨기에 경제 기적"
+ BEL_welfare:0 "복지 국가"
+ BEL_council:0 "경제 위원회"
+ BEL_national_ind:0 "국유화된 산업"
+ BEL_small:0 "호황을 누리는 중소기업"
  BEL_state_christianity:0 "국가 기독교"
  BEL_leopold:0 "레오폴드 3세" 
- BEL_leopold_desc:0 "The King of Belgium is the symbol for Belgian Unity. Leopold the Third became King in 1934 after his beloved and popular father Albert died during mountain climbing. The new young King must prove himself and keep up the good image of the Royal House of Saxe-Coburg and Gotha. Though there are some rumours that he sometimes acts independently without consulting his ministers"
+ BEL_leopold_desc:0 "벨기에 국왕은 벨기에 통일의 상징입니다. 레오폴드 3세는 1934년 사랑스럽고 인기 있는 아버지 알베르트가 등반 도중 사망한 후 왕이 되었습니다. 새로운 젊은 왕은 자신을 증명하고 작센코부르크고타 왕가의 좋은 이미지를 유지해야만 합니다. 간혹 장관들과 상의하지 않고 독자적으로 행동한다는 소문도 있지만."
  BEL_wallonie_flanders_idea:0 "분열된 국민"
- BEL_unemployment_idea:0 "Small Unemployment Crisis"
- BEL_unemployment_idea_desc:0 "Small Unemployment Crisis"
+ BEL_unemployment_idea:0 "소규모 실업 위기"
+ BEL_unemployment_idea_desc:0 "소규모 실업 위기"
  BEL_wallonie_flanders_idea_desc:0 "벨기에가 소국임에도 불구하고, 벨기에의 인구는 플란데런과 우알로니로 나뉘는데, 하나는 다른 나라로부터 독립을 위해 노력하고 있습니다."
- BEL_wallonie_flanders_idea_unified:0 "Burgeoning National Identity"
- BEL_wallonie_flanders_idea_unified_desc:0 "Though the gulf between the Waloons and Flemish remains, the tensions associated with them have begun to fade, and a true national identity is beginning to emerge."
- BEL_cas_discount_idea:0 "Airborne Artillery"
+ BEL_wallonie_flanders_idea_unified:0 "급증하는 국가 정체성"
+ BEL_wallonie_flanders_idea_unified_desc:0 "우알로니와 플란데런 사이의 간극은 여전하지만, 그들과 연관된 긴장은 사라지기 시작했고, 진정한 국가 정체성이 드러나기 시작하고 있습니다."
+ BEL_cas_discount_idea:0 "공수 포병"
  BEL_cas_discount_idea_desc:0 "By abandoning pretenses of true air superiority and focusing chiefly on an effective strike force which can operate in air-parity, we have considerably decreased production costs."
  BEL_armed_and_ready:0 "On Les Aura!"
  BEL_armed_and_ready_desc:0 "With a reinvigorated general staff, with a populace rallied and confident, with a military reequipped and rapidly modernising, we once-more are ready to prove, come what may, the defiant words of our late Soldier-King, Albert I. 'Belgium is a country, not a road.'"
@@ -257,27 +257,27 @@
 
  BEL_unite_the_communities:0 "A State only for the Strong"
  BEL_unite_the_communities_desc:0 "The army needs to become one of the most important aspects of our society. The quality of the army needs to improved. Pay of the average soldier up to general needs to be increased. The army is the only one who is able to protect our country now."
- BEL_youth_bond:0 "The Youth Bond"
+ BEL_youth_bond:0 "청년 동맹"
  BEL_youth_bond_desc:0 "The Youth can not fall prey to the ideas of socialism and democracy. Children must be teached the importance of loyalty to the state and have to be willing to defend their country in the future."
  BEL_adopt_verdinaso_ideas:0 "Adopt the Ideas of Verdinaso"
  BEL_adopt_verdinaso_ideas_desc:0 "The Rexist Party is falling apart and is not able to hold control over the country alone. Severen will more and more integrate the Rexists into Verdinaso to ensure stability over Belgium and end the two party system."
- BEL_develop_wallonia:0 "Develop Wallonia"
+ BEL_develop_wallonia:0 "우알로니 개발"
  BEL_develop_wallonia_desc:0 "Compared to the rest of Belgium, Wallonia is not quite there yet in terms of industrial potential. This must be fixed."
- BEL_congo:0 "Colonial Transportation Improvements"
+ BEL_congo:0 "식민지 운송 개선"
  BEL_congo_desc:0 "Our colonies in Congo do lack infrastructure which is a shame because of all the great resources hidden in the Central Africa that we cannot yet access."
- BEL_rubber:0 "Extend the Rubber Plantations"
+ BEL_rubber:0 "고무 플랜테이션 확장"
  BEL_rubber_desc:0 "The Belgian Congo has resources like rubber which are essential for war and civilian effort. We must expand our rubber plantations in the region."
- BEL_tungsten:0 "Expand Tungsten and Copper Mining"
+ BEL_tungsten:0 "텅스텐 및 구리 채굴 확대"
  BEL_tungsten_desc:0 "Tungsten as well as copper are traditionally imported to Belgium from abroad. It is both expensive and inefficient, Belgium must build its own mines and extract those resources to no longer rely on outside support."
- BEL_colonial_industry:0 "Colonial Manufacturing"
+ BEL_colonial_industry:0 "식민지 제조업"
  BEL_colonial_industry_desc:0 "Should the global conflict take place, Belgium will not be able to stand its ground in Europe. For this, we must build new industry in our colonies in case a war breaks out."
- BEL_colonial_uranium:0 "Extract and Sell Uranium"
+ BEL_colonial_uranium:0 "우라늄 추출과 판매"
  BEL_colonial_uranium_desc:0 "It would seem that Nuclear Power is the future. While we cannot develop our own technology yet, we could sell these raw resources to other countries."
- BEL_tank_effort:0 "Develop the Tank Program"
+ BEL_tank_effort:0 "전차 계획 개발"
  BEL_tank_effort_desc:0 "Tanks are the dreadnoughts of the battle field, they cannot be stopped and will defeat any infantry on its way. We must invest more in this technology."
- BEL_steel_mines:0 "Expand the Flanders Steel Mines"
+ BEL_steel_mines:0 "플란데런 철광 확장"
  BEL_steel_mines_desc:0 "There can never be enough steel, Belgium must expand its steel mines in Flanders."
- BEL_netherlands:0 "Integrate the Netherlands"
+ BEL_netherlands:0 "네덜란드 통합"
 
  benelux_faction:0 "베네룩스 연합"
  belgian_entente:0 "벨기에-협상국 동맹"
@@ -325,12 +325,12 @@
  BEL_diets_fascism:0 "디츨란트"
  BEL_diets_fascism_DEF:0 "디츨란트국" 
 
- BEL_diets_democratic_ADJ:0 "디츠"
- BEL_diets_neutrality_ADJ:0 "디츠"
- BEL_diets_conservatives_ADJ:0 "디츠"
- BEL_diets_communism_ADJ:0 "디츠"
- BEL_diets_fascism_ADJ:0 "디츠"
- BEL_diets_socialist_ADJ:0 "디츠"
+ BEL_diets_democratic_ADJ:0 "디츨란트"
+ BEL_diets_neutrality_ADJ:0 "디츨란트"
+ BEL_diets_conservatives_ADJ:0 "디츨란트"
+ BEL_diets_communism_ADJ:0 "디츨란트"
+ BEL_diets_fascism_ADJ:0 "디츨란트"
+ BEL_diets_socialist_ADJ:0 "디츨란트"
 
  WAL_democratic:0 "우알로니"
  WAL_democratic_DEF:0 "우알로니"
