--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -206,30 +206,30 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FR_war_FEA:0 "북부에 혁명 전파"
  FR_war_FEA_desc:0 "새로운 지도하에 프랑스는 이제 사방에서 적과 마주하게 되었습니다. 살아남으려면 먼저 치고 혁명을 북으로 전파해야 합니다."
  FR_nationalize_air_industry:0 "항공 산업 국영화"
- FR_nationalize_air_industry_desc:0 "France is lacking behind Germany and United Kingdom in terms of air power. The French airforce is both smaller and has a more outdated arsenal. This must be repaired with the nationalization of French air industry."
+ FR_nationalize_air_industry_desc:0 "프랑스는 공군력 면에서 독일과 영국보다 뒤떨어져 있습니다. 프랑스 공군의 무기 공장은 더 작고 구식입니다. 이것은 프랑스 항공산업의 국유화와 함께 해결되어야 합니다."
  FR_intervene_spanish_civil_war:0 "스페인 내전 개입"
- FR_intervene_spanish_civil_war_desc:0 "While Spain is being destroyed by the ongoing civil war, nationalist as well as communist factions are emerging. Those parties pose a potential threat to France's future. In this conflict, so far we've maintained a neutrality but that is about to change."
+ FR_intervene_spanish_civil_war_desc:0 "스페인이 계속되는 내전으로 파괴되고 있는 가운데 공산주의는 물론 국민주의 세력까지 등장하고 있습니다. 그 정당들은 프랑스의 미래에 잠재적인 위협이 됩니다. 이 분쟁에서, 지금까지 우리는 중립을 유지했지만, 그것은 곧 바뀔 것입니다."
  FR_empire_reborn:0 "제국의 부활"
- FR_empire_reborn_desc:0 "Napoleon IV has ascended on the throne. Once more the legacy of the First French Empire under Napoleon I lives on. France will rise once again and live up to its former glory."
- FR_imperial_faction:0 "The New Continental System"
- FR_imperial_faction_desc:0 "The revival of the Continental System (first introduced by Napoleon I), will allow us to blocade the United Kingdom and establish a formidable alliance on the continental Europe."
+ FR_empire_reborn_desc:0 "나폴레옹 4세가 제위에 올랐습니다. 나폴레옹 1세 휘하의 프랑스 제1제국의 유산이 다시 한번 살아나고 있습니다. 프랑스는 다시 한번 일어서서 이전의 영광에 부응할 것입니다."
+ FR_imperial_faction:0 "신 대륙봉쇄령"
+ FR_imperial_faction_desc:0 "(나폴레옹 1세가 처음 도입한) 대륙봉쇄령의 부활은 우리가 영국을 포위하고 유럽 대륙에 가공할 동맹을 구축할 수 있게 해줄 것입니다."
  FR_march_south_claims:0 "프랑스 남부 국경 확보"
- FR_march_south_claims_desc:0 "During the First French Empire, both Spain and Italy were client states of France. To protect our southern borders, it is essential for these two countries to join the continental system whether they like it or not..."
+ FR_march_south_claims_desc:0 "프랑스 제1제국 당시 스페인과 이탈리아는 모두 프랑스의 의존국이었습니다. 우리 남쪽 국경을 지키기 위해서는 이 두 나라가 좋든 싫든 대륙봉쇄령에 동참하는 것이 필수적입니다..."
  FR_march_north_claims:0 "베네룩스로의 진군"
- FR_march_north_claims_desc:0 "The Benelux is a very important region, during the Napoleon I's rule, these lands were incorporated in metropolitan France. For our own protection, we must do the same."
+ FR_march_north_claims_desc:0 "베네룩스는 나폴레옹 1세의 통치 기간 동안 프랑스 본토로 편입된 매우 중요한 지역입니다. 우리 자신의 보호를 위해 우리도 똑같이 해야 합니다."
  FR_march_east_claims:0 "국경을 동쪽으로 이동"
- FR_march_east_claims_desc:0 "The Rhine river is one of the most formidable natural defenses of Europe. By moving our border to further to the East, France will gain an upper hand in the Central Europe region."
+ FR_march_east_claims_desc:0 "라인강은 유럽에서 가장 가공할 자연 방벽 중 하나입니다. 우리의 국경을 동쪽으로 더 이동시킴으로써 프랑스가 중부 유럽 지역에서 우위를 점하게 될 것입니다."
  FR_war_ENG:0 "영국과의 전쟁"
- FR_war_ENG_desc:0 "For too long the United Kingdom has been the dominant European power. This is must be stopped! The French Empire will rise victorious once more!"
+ FR_war_ENG_desc:0 "너무 오랫동안 영국은 유럽의 지배국이었습니다. 이를 멈춰야 합니다! 프랑스 제국은 다시 한번 승리할 것입니다!"
  FR_war_RUS:0 "러시아와의 전쟁"
- FR_war_RUS_desc:0 "Russia has become too powerful, they must be defeated and avenged for 1812. The Grande Armée will march on Moscow once again and be victorious!"
+ FR_war_RUS_desc:0 "러시아가 너무 강대해졌으니 그들을 패배시키고 1812년의 복수를 해야 합니다. 대육군은 다시 한번 모스크바를 행진하여 승리를 거둘 것입니다!"
  FR_rally_the_leagues:0 "연맹 집회"
  FR_rally_the_leagues_desc:0 "France was betrayed by left-wing extremists and anarchists. The only way to fight them is to side with the far-right leagues."
  FR_ban_communism:0 "공산주의 금지"
  FR_ban_communism_desc:0 "For too long these communists have terrorized France, it is time to officially ban this ideology on French soil."
  FR_cagoule_coup:0 "혁명 비밀 행동 위원회 쿠데타"
- FR_cagoule_coup_desc:0 "Government of France is at its weakest state, we must strike now and let the far-right wing la Cagoule group seize the government."
- FR_invite_industrialists:0 "Invite Industrialists"
+ FR_cagoule_coup_desc:0 "프랑스 정부는 가장 약한 상태에 있는데, 우리는 지금 공격해야 하며 극우파인 혁명 비밀 행동 위원회가 정부를 장악하도록 해야 합니다."
+ FR_invite_industrialists:0 "기업가 초청"
  FR_invite_industrialists_desc:0 "Thanks to the founder of Cagoule group, Eugène Deloncle and his connections within industrial circles, our government will be able to invite some of the well known and reliable industrialists to help rebuild France."
  FR_government_restruction:0 "정부 구조 조정"
  FR_government_restruction_desc:0 "France is still fragile after the civil war. In order to improve and strengthen the state, we must undergo major government restructures."
@@ -241,23 +241,23 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FR_counter_revolution_desc:0 "As a major power, we must do everything to protect Europe from waves of uprisings and anarchist revolutions. France is to ensure stability and prosperity of the continent."
  FR_claim_quebec:0 "프랑스령 퀘벡 요구"
  FR_claim_quebec_desc:0 "The region of Québec was part of the lost New France. Under new King, France will regain its former North American colonies."
- FR_normandie_niemen:0 "Escadron Normandie-Niemen"
- FR_normandie_niemen_desc:0 "Paris has may be fallen but France is not. Our allies in Russia are still fighting the war, we must do everything to support their war effort agaisnt the enemy. We shall begin by sending an air squadron with our ace pilots to help them achieve air supreority."
+ FR_normandie_niemen:0 "노르망디-네만 연대"
+ FR_normandie_niemen_desc:0 "파리는 함락되었을지 모르지만 프랑스는 그렇지 않습니다. 러시아에 있는 우리의 동맹국들은 여전히 전쟁을 하고 있습니다. 우리는 적들이 아닌 그들의 전쟁 주력을 지원하기 위해 모든 것을 해야 합니다. 우리는 우선 우리의 에이스 조종사들과 함께 항공 비행대를 파견하여 그들이 공중 우세를 획득할 수 있도록 도울 것입니다."
  FR_rhineland_conference:0 "라인란트 회담"
- FR_rhineland_conference_desc:0 "17 years ago a full occupation of Rhine by the French forces began. Since then it has been a rather constly affair to maintain. A conference must take place to decide the fate of the Rheinish occupation."
- FR_rhineland_occupation:0 "라인란트 점령하라"
- FR_rhineland_occupation_desc:0 "France cannot let Rhineland go, it is its barrier, a satellite state to prevent any surprise attack from the East."
+ FR_rhineland_conference_desc:0 "17년 전 프랑스군에 의한 라인 전면 점령이 시작되었습니다. 그 이후로 그 지역은 유지하기에 다소 힘이 드는 곳이었습니다. 라인 점령의 운명을 결정하는 회의가 열려야 합니다."
+ FR_rhineland_occupation:0 "라인란트를 점령하라"
+ FR_rhineland_occupation_desc:0 "프랑스는 라인란트를 놓아줄 수 없습니다. 라인란트는 동방의 어떠한 기습 공격을 막기 위한 위성 국가이자 장벽입니다."
  FR_leave_rhineland:0 "라인란트를 떠나라"
- FR_leave_rhineland_desc:0 "The occupation of Rhine has indeed been a very constly and not profitable. France must retreat from the country."
+ FR_leave_rhineland_desc:0 "라인 점령은 실로 매우 경직되고 이익이 되지 않는 것이었습니다. 프랑스는 그 나라에서 떠나야 합니다."
  FR_war_USA:0 "프랑스령 루아지애나 재정복"
  FR_war_USA_desc:0 "Back in the days France used to own a large colony in North America which span from Alberta to New Orleans called the New France. Under new leadership, we will reconquer these lands once again."
- FR_new_colonial_bases:0 "Construct New Colonial Bases"
+ FR_new_colonial_bases:0 "새 식민 기지 건설"
  FR_new_colonial_bases_desc:0 "Our colonies lack proper infrastructure. In case of a world conflict, we must be able to navigate our territories with ease."
- FR_colonial_ports:0 "Improve Colonial Ports"
+ FR_colonial_ports:0 "식민지 항만 개선"
  FR_colonial_ports_desc:0 "As well as land bases, our colonies also lack maritime infrastructure. With our large fleet, we must improve those remote port bases."
  FR_coastline_defense:0 "우리의 해안선 요새화"
  FR_coastline_defense_desc:0 "From North to West, from West to South our maritime borders are exposed. We must fortify our coastline to protect France from possible naval invasions."
- FR_fra_secret_service:0 "Reorganize the Secret Service"
+ FR_fra_secret_service:0 "첩보 기관 재조직"
  FR_fra_secret_service_desc:0 "To further protect France, we must fund our secret service. This will allow us to gather extra intelligence from our enemies and to be prepared for any conflict."
 
  #French Traits
@@ -321,10 +321,10 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FRA_construction_russia:0 "러시아에 새로운 공장 건설"
 
  #Ideas
- FRA_counter_revolution_idea:0 "Counter-Revolutionism"
- FRA_constitutionalism_idea:0 "Constitutional Monarchy"
- FRA_grande_armee_idea:0 "Grande Armée"
- FRA_scars_of_the_great_war:0 "Demobilized Army"
+ FRA_counter_revolution_idea:0 "반혁명주의"
+ FRA_constitutionalism_idea:0 "입헌 군주국"
+ FRA_grande_armee_idea:0 "대육군"
+ FRA_scars_of_the_great_war:0 "해산된 군대"
  FRA_scars_of_the_great_war_desc:0 "A great generation of young men was lost in the Great War. Following the disasterous Nivelle offensive massacre in 1917, the French soldiers became more and more anarchist with troops refusing to take up their arms. As a result, France's armed forces are largely demobilized and only consist of professional force."
  FRA_saar_crisis:0 "자르의 긴장"
  FRA_homeland_defense:0 "프랑스를 위해!"
@@ -332,10 +332,10 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FRA_GER_truce:0 "휴전"
  FRA_GER_truce_desc:0 "전쟁은 끝났고, 패배한 쪽은 평화를 유지해야 합니다."
  FRA_nationalist_sentiment_idea:0 "대중에 퍼진 민족주의"
- FRA_nationalist_sentiment_idea_desc:0 "선거에 이어 우리 나라에도 새로운 민족주의의 물결이 일고 있다. 우리는 아직 행동할 수 없지만 이 운동이 충분한 지지를 얻으면 우리 정부에 필요한 변화를 줄 수 있을 것입니다."
+ FRA_nationalist_sentiment_idea_desc:0 "선거에 이어 우리 나라에도 새로운 민족주의의 물결이 일고 있습니다. 우리는 아직 행동할 수 없지만 이 운동이 충분한 지지를 얻으면 우리 정부에 필요한 변화를 줄 수 있을 것입니다."
  FRA_colony_state_idea:0 "식민지"
- FRA_mass_nationalization_idea:0 "Nationalization of Industry"
- FRA_political_instability_idea:0 "Violence on the Streets"
+ FRA_mass_nationalization_idea:0 "산업 국유화"
+ FRA_political_instability_idea:0 "거리의 폭력"
  FRA_political_instability_idea_desc:0 "Just like the government, the French population is divided as well. The troops and the countryside population is increasingly supporting the left-wing parties, while cities are divided between right-wing and democratic factions. This of course causes clashes on the streets between the politically opposed citizens."
  FRA_political_instability_2_idea:0 "Violence of the Streets Escalates"
  FRA_inefficient_gov_idea:0 "Inefficient Government"
