--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -431,7 +431,7 @@
  CHI_expand_the_ledo_road:0 "레도 로드 확충"
  CHI_expand_the_airlift:0 "험프 공수보급로의 수송량 증가"
  PRC_infiltrate_east_hebei:0 "동허베이 침투"
- PRC_infiltrate_jehol:0 "저홀 침투"
+ PRC_infiltrate_jehol:0 "러허 침투"
  PRC_infiltrate_south_chahar:0 "남차하르 침투"
  PRC_infiltrate_chahar:0 "차하르 침투"
  PRC_infiltrate_heilungkiang:0 "헤이룽장 침투"
@@ -444,7 +444,7 @@
  communist_infiltration:0 "공산주의자 침투"
  communist_uprising:0 "공산주의자 봉기"
  communist_infiltration_in_east_hebei:0 "동허베이 공산주의자 침투"
- communist_infiltration_in_jehol:0 "저홀 공산주의자 침투"
+ communist_infiltration_in_jehol:0 "러허 공산주의자 침투"
  communist_infiltration_in_south_chahar:0 "남차하르 공산주의자 침투"
  communist_infiltration_in_chahar:0 "차하르 공산주의자 침투"
  communist_infiltration_in_heilungkiang:0 "헤이룽장 공산주의자 침투"
