--- a/localisation/bav_events_l_english.yml
+++ b/localisation/bav_events_l_english.yml
@@ -75,3 +75,16 @@ bavaria.21.b:0 "붉은 독일이여 영원하라!"
 bavaria.22.t:0 "프랑스는 우리와 함께 있다"
 bavaria.22.d:0 "우리는 혼자가 아닙니다! 프랑스는 우리의 독립을 지지하고, 전쟁이 일어나면 우리를 보호할 것입니다!"
 bavaria.22.a:0 "대단하군!"
+
+bavaria.30.t:0 "남부 코뮌이 최후통첩을 보내오다!"
+bavaria.30.d:0 "남부 코뮌 정부가 우리나라에 공식 최후통첩을 보내왔습니다. 그들은 우리의 합병을 요구하는데, 어떻게 진행하면 좋겠습니까?"
+bavaria.30.a:0 "그들과 함께하자."
+bavaria.30.b:0 "작센은 독립을 유지할 것이다."
+
+bavaria.31.t:0 "작센이 굴복하다"
+bavaria.31.d:0 "작센 정부는 우리의 최후통첩을 받아들였고, 통합은 즉시 시작될 것입니다."
+bavaria.31.a:0 "훌륭해!"
+
+bavaria.32.t:0 "작센이 저항하다"
+bavaria.32.d:0 "작센 정부는 우리의 요구를 들어주지 않았습니다. 이것은 우리가 전쟁을 준비해야 한다는 것을 의미합니다!"
+bavaria.32.a:0 "전투 준비!"
