--- a/localisation/bel_focus_l_english.yml
+++ b/localisation/bel_focus_l_english.yml
@@ -467,8 +467,9 @@
  belgium.40.d:0 "On the 11th October the leader of the Communist Party Joseph Jacquemotte aged 53 has passed away. Jacquemotte was very early on involved with radical socialism being rather known for his street fighting then his rough speeches. Due to his incresing demand of Communist and Spartacist principles he was creating a new party inside the the PBO and was forced to leave. Despite his following years not always being successful he climbed himself to the top in the new Communist Party. He led the party through the 1932 and 1936 elections and coming to new height of 6% in the population. His succesor as the leader of the party will be Julien Lauhaut."
  belgium.40.a:0 "May he rest in Peace"
 
-
-
+ belgium.41.t:0 "폴 판 젤란트가 수상직에서 물러나다"
+ belgium.41.d:0 "가톨릭 정치인 구스타브 사프는 젤란트 수상이 국민은행으로부터 돈을 받았다고 비난했습니다. 젤랜드는 물론 이를 격렬하게 부인했고 사프는 당에서 제명되었습니다. 이에 불구하고, 검찰은 이 문제를 조사하였고 젤란트가 돈을 받았다고 추정했습니다. 돈을 받는 것은 금지된 것이 아니지만 젤란트가 돈을 받은 것을 부인하였기 때문에, 결과적으로 그는 신뢰를 잃었습니다. 이로 인해 젤란드는 총리직에서 물러나게 되었습니다. 위베르 피에로는 새 정부 구성과 연합 유지라는 과제를 떠맡았습니다."
+ belgium.41.a:0 "올바른 선택이다."
 
  belgium.16.b:0 "중도파"
  belgium.16.c:0 "우파"
