--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -375,9 +375,9 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  france.1006.d:0 "스위스는 정당한 프랑스 땅인 로망디를 우리의 통제 하로 돌려주려 하지 않으려 우리에게 반항했습니다. 이 중립적인 바보들에게 교훈을 줘야 할 때입니다."
  france.1006.a:0 "헬베티아 공화국은 복구될 것이다!"
 
- france.1010.t:0 "알베르 사라우트가 사직하다"
- france.1010.d:0 "우리의 알베르 사라우트 총리는 즉시 사임할 것이라고 발표했다. 에두아르 달라디에 신임 급진당 당수는 차기 총리가 될 것입니다. 달라디에는 즉시 국민들이 우리 정부에서 올바른 대표성을 갖도록 하기 위해 조기 선거를 소집했습니다."
- france.1010.a:0 "우리는 사라우트씨가 멋진 은퇴를 하기를 바란다."
+ france.1010.t:0 "알베르 사로가 사직하다"
+ france.1010.d:0 "우리의 알베르 사로 총리는 즉시 사임할 것이라고 발표했습니다. 에두아르 달라디에 신임 급진당 당수는 차기 총리가 될 것입니다. 달라디에는 즉시 국민들이 우리 정부에서 올바른 대표성을 갖도록 하기 위해 조기 선거를 소집했습니다."
+ france.1010.a:0 "우리는 사로 씨가 멋진 은퇴를 하기를 바란다."
 
  france.1007.t:0 "알자스 최후통첩"
  france.1007.d:0 "독일의 공산주의 정부인 바이에른은 군대를 동원하였다. 그들은 대전 후에 우리가 접수했던 알자스를 되찾기를 원합니다. 이런 침략 행위에 대해 우리는 어떻게 대응해야 합니까?"
