--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -15,7 +15,7 @@
  LOADING_TIP_13:0 "세르비아인들이여, 온 힘을 다해 집과 세르비아 국가를 지켜라!\n- 세르비아 왕국군의 최고 사령관, 섭정 알렉산다르"
  LOADING_TIP_14:0 "나는 내가 믿을 수 없는 사람이라고 생각하지 않는다.\n- 벨러 쿤"
  LOADING_TIP_15:0 "역사에서 배우는 것은 아무도 역사로부터 배우는 것이 없다는 것이다.\n- 오토 폰 합스부르크"
- LOADING_TIP_16:0 "우리의 식민지에 문제가 있는 것 같다.\n- 시리아 폭동에 대한 소식을 받은 알베르 사라우트"
+ LOADING_TIP_16:0 "우리의 식민지에 문제가 있는 것 같다.\n- 시리아 폭동에 대한 소식을 받은 알베르 사로"
  LOADING_TIP_18:0 "성공은 열정을 잃지 않고 실패에서 실패로 전진하면서 이뤄진다.\n- 윈스턴 처칠"
  LOADING_TIP_19:0 "만약 지옥길을 걷고 있다면, 계속 전진하라.\n- 윈스턴 처칠"
  LOADING_TIP_20:0 "민주주의에 대한 최고의 반론은 평범한 유권자와의 5분 대화이다.\n- 윈스턴 처칠"
