--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -224,23 +224,23 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FR_war_RUS:0 "러시아와의 전쟁"
  FR_war_RUS_desc:0 "러시아가 너무 강대해졌으니 그들을 패배시키고 1812년의 복수를 해야 합니다. 대육군은 다시 한번 모스크바를 행진하여 승리를 거둘 것입니다!"
  FR_rally_the_leagues:0 "연맹 집회"
- FR_rally_the_leagues_desc:0 "France was betrayed by left-wing extremists and anarchists. The only way to fight them is to side with the far-right leagues."
+ FR_rally_the_leagues_desc:0 "프랑스는 좌파 극단주의자들과 무정부주의자들에게 배신당했습니다. 그들과 싸우는 유일한 방법은 극우파 편을 드는 것입니다."
  FR_ban_communism:0 "공산주의 금지"
- FR_ban_communism_desc:0 "For too long these communists have terrorized France, it is time to officially ban this ideology on French soil."
+ FR_ban_communism_desc:0 "너무 오랫동안 이 공산주의자들은 프랑스를 공포에 떨게 했고, 이제는 프랑스 땅에서 이 이념을 공식적으로 금지할 때입니다."
  FR_cagoule_coup:0 "혁명 비밀 행동 위원회 쿠데타"
  FR_cagoule_coup_desc:0 "프랑스 정부는 가장 약한 상태에 있는데, 우리는 지금 공격해야 하며 극우파인 혁명 비밀 행동 위원회가 정부를 장악하도록 해야 합니다."
  FR_invite_industrialists:0 "기업가 초청"
- FR_invite_industrialists_desc:0 "Thanks to the founder of Cagoule group, Eugène Deloncle and his connections within industrial circles, our government will be able to invite some of the well known and reliable industrialists to help rebuild France."
+ FR_invite_industrialists_desc:0 "혁명 비밀 행동 위원회의 설립자인 외젠 들롱클과 산업계에서의 그의 인맥 덕분에, 우리 정부는 프랑스의 재건을 돕기 위해 잘 알려져 있고 신뢰할 수 있는 몇몇 산업가들을 초대할 수 있을 것입니다."
  FR_government_restruction:0 "정부 구조 조정"
- FR_government_restruction_desc:0 "France is still fragile after the civil war. In order to improve and strengthen the state, we must undergo major government restructures."
+ FR_government_restruction_desc:0 "프랑스는 내전 후에도 여전히 취약합니다. 국가를 개선하고 강화하기 위해, 우리는 정부의 대대적인 구조조정을 겪어야 합니다."
  FR_natural_borders:0 "프랑스의 자연 경계"
- FR_natural_borders_desc:0 "There are still many more Frenchmen living outside of metropole. Those people are under our protection and those lands must be returned under France's control."
+ FR_natural_borders_desc:0 "프랑스 본토 외곽에 여전히 더 많은 프랑스인들이 살고 있습니다. 그 사람들은 우리의 보호하에 들어와야 하며 그 땅들은 프랑스의 통제하에 반환되어야 합니다."
  FR_strike_GER:0 "선제공격!"
- FR_strike_GER_desc:0 "It is clear to us that the Germans want revenge. To avoid any surprise attacks, we should launch an attack of our own and bring down the Eastern threat."
+ FR_strike_GER_desc:0 "독일군이 복수를 원하는 것은 우리에게 분명합니다. 기습공격을 피하기 위해 우리 스스로 공격을 개시해 동방의 위협을 격추시켜야 합니다."
  FR_counter_revolution:0 "반혁명주의"
- FR_counter_revolution_desc:0 "As a major power, we must do everything to protect Europe from waves of uprisings and anarchist revolutions. France is to ensure stability and prosperity of the continent."
+ FR_counter_revolution_desc:0 "주요 강국으로서, 우리는 폭동과 무정부주의 혁명의 물결로부터 유럽을 보호하기 위해 모든 것을 해야 합니다. 프랑스는 대륙의 안정과 번영을 보장하는 것입니다."
  FR_claim_quebec:0 "프랑스령 퀘벡 요구"
- FR_claim_quebec_desc:0 "The region of Québec was part of the lost New France. Under new King, France will regain its former North American colonies."
+ FR_claim_quebec_desc:0 "퀘벡 지역은 잃어버린 누벨프랑스의 일부입니다. 새로운 왕 아래, 프랑스는 이전의 북아메리카 식민지를 되찾을 것입니다."
  FR_normandie_niemen:0 "노르망디-네만 연대"
  FR_normandie_niemen_desc:0 "파리는 함락되었을지 모르지만 프랑스는 그렇지 않습니다. 러시아에 있는 우리의 동맹국들은 여전히 전쟁을 하고 있습니다. 우리는 적들이 아닌 그들의 전쟁 주력을 지원하기 위해 모든 것을 해야 합니다. 우리는 우선 우리의 에이스 조종사들과 함께 항공 비행대를 파견하여 그들이 공중 우세를 획득할 수 있도록 도울 것입니다."
  FR_rhineland_conference:0 "라인란트 회담"
@@ -250,15 +250,15 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FR_leave_rhineland:0 "라인란트를 떠나라"
  FR_leave_rhineland_desc:0 "라인 점령은 실로 매우 경직되고 이익이 되지 않는 것이었습니다. 프랑스는 그 나라에서 떠나야 합니다."
  FR_war_USA:0 "프랑스령 루아지애나 재정복"
- FR_war_USA_desc:0 "Back in the days France used to own a large colony in North America which span from Alberta to New Orleans called the New France. Under new leadership, we will reconquer these lands once again."
+ FR_war_USA_desc:0 "옛날 프랑스는 앨버타에서 뉴올리언스까지 이르는 북미에 누벨프랑스라고 불리는 큰 식민지를 가지고 있었습니다. 새로운 지도 아래, 우리는 다시 한번 이 땅을 다시 장식할 것입니다."
  FR_new_colonial_bases:0 "새 식민 기지 건설"
- FR_new_colonial_bases_desc:0 "Our colonies lack proper infrastructure. In case of a world conflict, we must be able to navigate our territories with ease."
+ FR_new_colonial_bases_desc:0 "우리의 식민지는 적절한 기반시설이 부족합니다. 세계적인 분쟁이 터질 경우, 우리는 우리의 영토를 쉽게 다닐 수 있어야 합니다."
  FR_colonial_ports:0 "식민지 항만 개선"
- FR_colonial_ports_desc:0 "As well as land bases, our colonies also lack maritime infrastructure. With our large fleet, we must improve those remote port bases."
+ FR_colonial_ports_desc:0 "육상 기지뿐만 아니라, 우리의 식민지도 해양 기반시설이 부족합니다. 우리의 대규모 함대와 함께, 우리는 그 외진 항구 기지를 개선해야 합니다."
  FR_coastline_defense:0 "우리의 해안선 요새화"
- FR_coastline_defense_desc:0 "From North to West, from West to South our maritime borders are exposed. We must fortify our coastline to protect France from possible naval invasions."
+ FR_coastline_defense_desc:0 "북에서 서로, 서에서 남으로 우리의 해상 경계선이 노출되어 있습니다. 우리는 가능한 해상의 침략으로부터 프랑스를 보호하기 위해 해안선을 강화해야 합니다."
  FR_fra_secret_service:0 "첩보 기관 재조직"
- FR_fra_secret_service_desc:0 "To further protect France, we must fund our secret service. This will allow us to gather extra intelligence from our enemies and to be prepared for any conflict."
+ FR_fra_secret_service_desc:0 "프랑스를 더 보호하기 위해, 우리는 첩보 기관에 자금을 지원해야 합니다. 이를 통해 우리는 적들로부터 추가적인 정보를 수집하고 어떤 분쟁에도 대비할 수 있게 될 것입니다."
 
  #French Traits
  INOT_descendant_of_napoleon:0 "나폴레옹 1세의 후손"
@@ -326,7 +326,7 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FRA_constitutionalism_idea:0 "입헌 군주국"
  FRA_grande_armee_idea:0 "대육군"
  FRA_scars_of_the_great_war:0 "해산된 군대"
- FRA_scars_of_the_great_war_desc:0 "A great generation of young men was lost in the Great War. Following the disasterous Nivelle offensive massacre in 1917, the French soldiers became more and more anarchist with troops refusing to take up their arms. As a result, France's armed forces are largely demobilized and only consist of professional force."
+ FRA_scars_of_the_great_war_desc:0 "대전으로 위대한 세대의 젊은이들을 잃었습니다. 1917년 재앙적인 니벨 공세의 대패 이후, 프랑스 군인들은 점점 더 무정부주의자가 되었고, 군대는 무기를 드는 것을 거부했습니다. 그 결과, 프랑스군은 크게 축소되었고 오직 직업군인으로만 구성되어 있습니다."
  FRA_saar_crisis:0 "자르의 긴장"
  FRA_homeland_defense:0 "프랑스를 위해!"
  FRA_economy:0 "경제 개입"
@@ -337,16 +337,16 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FRA_colony_state_idea:0 "식민지"
  FRA_mass_nationalization_idea:0 "산업 국유화"
  FRA_political_instability_idea:0 "거리의 폭력"
- FRA_political_instability_idea_desc:0 "Just like the government, the French population is divided as well. The troops and the countryside population is increasingly supporting the left-wing parties, while cities are divided between right-wing and democratic factions. This of course causes clashes on the streets between the politically opposed citizens."
- FRA_political_instability_2_idea:0 "Violence of the Streets Escalates"
- FRA_inefficient_gov_idea:0 "Inefficient Government"
- FRA_inefficient_gov_idea_desc:0 "As of now, the French government is greatly divided. On one side communists and nationalists are gaining population's support, on the other side democratic factions fail constantly to unify as a fraction resulting in political stagnation."
- FRA_strengthen_government_support_focus:0 "Laissez-Faire Policy"
- FRA_air_industry_idea:0 "Nationalized Air Sector"
- FRA_maurice_gauche:0 "Maurice-Henri Gauché"
- FRA_introduce_conscription_idea:0 "General Conscription"
- FRA_secret_service_idea:0 "Reorganized Deuxième Bureau"
- FRA_infantry_focus_idea:0 "Standardization of Infantry Equipment"
+ FRA_political_instability_idea_desc:0 "정부처럼 프랑스 국민들도 분열돼 있습니다. 군대와 농촌 주민들은 점점 좌파 정당을 지지하고 있는 반면 도시는 우파와 민주파로 나뉘어 있습니다. 이것은 물론 정치적으로 반대하는 시민들 사이에 거리에서 충돌을 야기합니다."
+ FRA_political_instability_2_idea:0 "고조된 거리의 폭력"
+ FRA_inefficient_gov_idea:0 "비효율적인 정부"
+ FRA_inefficient_gov_idea_desc:0 "현재 프랑스 정부는 크게 분열되어 있습니다. 한쪽에서는 공산주의자와 국민주의자들이 대중의 지지를 얻고 있고, 다른 한쪽에서는 민주적인 정당들이 정치적 침체를 초래하는 분열로 끊임없이 통일되지 못하고 있습니다."
+ FRA_strengthen_government_support_focus:0 "레세페르 정책"
+ FRA_air_industry_idea:0 "국영화된 항공 부문"
+ FRA_maurice_gauche:0 "모리스-앙리 고슈"
+ FRA_introduce_conscription_idea:0 "보편적 징병제"
+ FRA_secret_service_idea:0 "총참모부 제2국 재조직"
+ FRA_infantry_focus_idea:0 "보병 장비의 표준화"
 
  #Events
  france.1000.t:0 "합병이냐 전쟁이냐!"
@@ -512,22 +512,22 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  france.1041.d:0 "프랑스에서는 이제 막 피비린내 나는 갈등이 끝이 났습니다. 민족주의 세력은 반란을 진압했습니다. 간신히 파괴와 추방을 피한 사람들은 나라를 약탈하고 다른 곳에 정착했습니다.\n\n새로운 정권 하에서 새로운 프랑스국은 서구 민주주의 국가들이 걱정하는 민족주의와 전쟁 선전으로 나아갑니다."
  france.1041.a:0 "민족주의자들의 또 다른 승리다."
  
- france.1042.t:0 "France Suggests the Formation of Normandy Niemen Air Squadron"
- france.1042.d:0 "Despite the fall of Paris, the French are not beaten. To help us in our efforts against the enemy, France proposes the formation of a French air squadron to operate on the Eastern Front."
+ france.1042.t:0 "노르망데 네만 항공대 창설을 제안한 프랑스"
+ france.1042.d:0 "파리의 함락에도 불구하고, 프랑스인들은 지지 않습니다. 적에 대한 우리의 노력을 돕기 위해 프랑스는 동부전선에서 작전할 프랑스 항공대의 구성을 제안합니다."
  france.1042.a:0 "훌륭한 생각이다!"
  france.1042.b:0 "어차피 별 도움이 안 될 거다..."
  
- france.1043.t:0 "Russia Agrees"
- france.1043.d:0 "Russia has agreed to our proposition. We will immediately initiate the transfer of our pilots to the Eastern Front."
+ france.1043.t:0 "러시아의 수락"
+ france.1043.d:0 "러시아는 우리의 제안에 동의했습니다. 즉시 동부전선으로의 조종사 이양을 개시할 것입니다."
  france.1043.a:0 "훌륭해!"
  
- france.1044.t:0 "Russia Declines"
- france.1044.d:0 "Despite our efforts to help Russia, the Russians have declined our offer."
- france.1044.a:0 "Too Bad"
+ france.1044.t:0 "러시아의 거절"
+ france.1044.d:0 "러시아를 도우려는 우리의 노력에도 불구하고 러시아인들은 우리의 제의를 거절했습니다."
+ france.1044.a:0 "너무 한다."
  
  france.1045.t:0 "S.M.R. Jean Duke of Guise Abdicates"
- france.1045.d:0 "It was annouced earlier today, the King of all French submitted his abdication in favour of his youngest son, Henri Count of Paris.\n\nThis decision was followed by deterioration of His Majestry's health. Henri is expected to be coronated this week."
- france.1045.a:0 "Long live the King!"
+ france.1045.d:0 "오늘 아침 전프랑스의 왕이 그의 막내아들 파리 백작 앙리를 위해 퇴위하기로 하였습니다.\n\n이 결정은 폐하의 건강 악화에 따른 것입니다. 앙리는 이번 주에 즉위할 예정입니다."
+ france.1045.a:0 "국왕 폐하 만세!"
  
  france.1046.t:0 "독일의 운명"
  france.1046.d:0 "독일 지역이 프랑스 통제하에 있습니다. 어떻게 진행해야 합니까?"
@@ -535,12 +535,12 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  france.1046.b:0 "라인 서부를 점령하고, 나머지에 위성국을 세워라."
  france.1046.c:0 "독일을 점령하라."
  
- france.1047.t:0 "Joint French Construction Effort"
- france.1047.d:0 "Under Paris-Petrograd Treaty, France has sent its specialists to Russia to assess and build new factories in Russia."
+ france.1047.t:0 "합동 프랑스 건설 주력"
+ france.1047.d:0 "파리-페트로그라드 조약에 따라, 프랑스는 러시아에 새로운 공장을 건설하고 평가하기 위해 러시아에 전문가를 파견했습니다."
  france.1047.a:0 "훌륭해!"
  
  france.1048.t:0 "알자스 최후통첩"
- france.1048.d:0 "Earlier this week, a series of skirmashes took place on Franco-German border, specifically in the region of Alsace-Lorraine.\n\nFrance's foreign ministry has demanded an immediate ceasefire and an investigation of the incident while their German counterparts have issued an ultimatum to the French for an immediate German occupation of the state similarly to 1914 borders arragement.\n\nIt is unclear how France will respond but analytics suggest a major war is about to break out on the European continent..."
+ france.1048.d:0 "이번 주 초, 프랑스와 독일 국경, 특히 알자스-로렌 지역에서 일련의 교전이 있었습니다.\n\n프랑스 외무부는 즉각적인 휴전과 이번 사건에 대한 조사를 요구하고 있는 반면, 독일 외무부는 1914년 국경 분쟁과 유사한 독일군의 즉각적인 지역 점령에 대한 최후통첩을 프랑스에 발표했습니다.\n\n프랑스가 어떤 반응을 보일지는 알 수 없지만, 분석가들은 유럽 대륙에서 큰 전쟁이 일어날 것으로 예상합니다..."
  france.1048.a:0 "좋지 않다."
 
  fcolony.1_FNA.t:0 "프랑스령 북아프리카가 분할을 요구하다!"
