--- a/localisation/bav_events_l_english.yml
+++ b/localisation/bav_events_l_english.yml
@@ -4,10 +4,10 @@ bavaria.1.d:0 "라인 회담 후에 우리는 혼자 남게 되었다. 바이에
 bavaria.1.a:0 "우리는 바이에른의 힘 앞에 굴복한다."
 bavaria.1.b:0 "안된다! 연합은 확고하게 서 있을 것이다."
 bavaria.2.t:0 "라인이 굴복하다"
-bavaria.2.d:0 "만세! 우리는 승리했습니다. 약한 라인 연합은 우리의 힘 아래 굴복했습니다."
+bavaria.2.d:0 "만세! 우리는 승리했습니다. 약한 라인 연방은 우리의 힘 아래 굴복했습니다."
 bavaria.2.a:0 "훌륭해."
 bavaria.3.t:0 "라인이 우리 제안을 거절하다"
-bavaria.3.d:0 "라인 연합이 우리의 제안을 거절했습니다. 우리는 전쟁에 대비해야 합니다."
+bavaria.3.d:0 "라인 연방이 우리의 제안을 거절했습니다. 우리는 전쟁에 대비해야 합니다."
 bavaria.3.a:0 "모국을 위하여!"
 bavaria.4.t:0 "슈바벤 반군들이 일어설 준비를 하고 있다!"
 bavaria.4.d:0 "바이에른 소비에트 공화국과의 연합을 요구하며 우리 마을과 도시의 거리에서 반란이 일어나고 있습니다! 어떻게 진행하면 좋겠습니까?"
@@ -55,21 +55,21 @@ bavaria.16.t:0 "오스트리아의 암살"
 bavaria.16.d:0 "이제 우리는 오스트리아의 대부분을 장악하고 있으므로 오스트리아 인구를 코뮌으로 통합해야 합니다. 공산주의 사상은 오스트리아에서 멀리 퍼져 있지 않기 때문에 많은 사람들이 저항할 것이지만, 곧 그들은 우리가 그들의 독재 정권의 사슬에서 그들을 해방시켰다는 것을 깨닫게 될 것입니다."
 bavaria.16.a:0 "독일은 하나밖에 있을 수 없다."
 bavaria.17.t:0 "라인 회담"
-bavaria.17.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n라인 연합은 프랑스 공화국에 의해 독립이 보장되어 있기 때문에 이를 내버려 둘 수 없습니다. 그러나 우리 나라의 공산주의 동조자들로 인해, 마르크스주의 세력과 전쟁을 벌일 수 없습니다. 왜냐하면 이것은 우리가 감당할 수 없는 내전을 일으킬 수도 있기 때문입니다."
-bavaria.17.a:0 "라인 연합의 운명은 스스로에게 달려 있다."
-bavaria.17.b:0 "라인 연합은 반드시 방어되어야 한다!"
+bavaria.17.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n라인 연방은 프랑스 공화국에 의해 독립이 보장되어 있기 때문에 이를 내버려 둘 수 없습니다. 그러나 우리 나라의 공산주의 동조자들로 인해, 마르크스주의 세력과 전쟁을 벌일 수 없습니다. 왜냐하면 이것은 우리가 감당할 수 없는 내전을 일으킬 수도 있기 때문입니다."
+bavaria.17.a:0 "라인 연방의 운명은 스스로에게 달려 있다."
+bavaria.17.b:0 "라인 연방은 반드시 방어되어야 한다!"
 bavaria.18.t:0 "프랑스가 물러서다"
-bavaria.18.d:0 "라인 회담이 시작된 지 며칠이 지났습니다. 프랑스는 마침내 라인 연합을 포기하기로 한 결정을 발표했습니다. 이것은 우리가 이제 프랑스의 위협 없이 라인 연합의 통합을 시작할 수 있다는 것을 의미합니다."
+bavaria.18.d:0 "라인 회담이 시작된 지 며칠이 지났습니다. 프랑스는 마침내 라인 연방을 포기하기로 한 결정을 발표했습니다. 이것은 우리가 이제 프랑스의 위협 없이 라인 연방의 통합을 시작할 수 있다는 것을 의미합니다."
 bavaria.18.a:0 "훌륭한 소식이다!"
-bavaria.19.t:0 "프랑스가 라인 연합의 독립을 보장하다"
-bavaria.19.d:0 "협상은 실패했습니다. 프랑스는 라인 연합에 대한 독립 보장을 재확인했습니다. 그러나 이 결정은 프랑스 내에서 우리 동지들의 주도 하에 내전을 촉발시켰습니다. 지금은 우리가 행동하고 약해진 프랑스와 라인란트를 공격해야 할 때입니다."
+bavaria.19.t:0 "프랑스가 라인 연방의 독립을 보장하다"
+bavaria.19.d:0 "협상은 실패했습니다. 프랑스는 라인 연방에 대한 독립 보장을 재확인했습니다. 그러나 이 결정은 프랑스 내에서 우리 동지들의 주도 하에 내전을 촉발시켰습니다. 지금은 우리가 행동하고 약해진 프랑스와 라인란트를 공격해야 할 때입니다."
 bavaria.19.a:0 "진격!"
 bavaria.20.t:0 "프랑스가 라인란트를 버리다"
-bavaria.20.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n최종적으로 프랑스는 라인란트에서 철수한다는 결정을 발표했습니다."
+bavaria.20.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n최종적으로 프랑스는 라인란트에서 철수한다는 결정을 발표했습니다."
 bavaria.20.a:0 "흥미롭군."
 bavaria.20.b:0 "통일을 향해 한 걸음 더 나아간다!"
-bavaria.21.t:0 "프랑스가 라인 연합의 독립을 보장하다"
-bavaria.21.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n궁극적으로 프랑스는 프랑스의 공산주의 운동가들을 화나게 한 전쟁이 일어날 경우에 대비해 라인랜드를 지원하기로 결정했다고 발표했습니다..."
+bavaria.21.t:0 "프랑스가 라인 연방의 독립을 보장하다"
+bavaria.21.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n궁극적으로 프랑스는 프랑스의 공산주의 운동가들을 화나게 한 전쟁이 일어날 경우에 대비해 라인랜드를 지원하기로 결정했다고 발표했습니다..."
 bavaria.21.a:0 "이 일은 좋게 끝날 수 없다."
 bavaria.21.b:0 "붉은 독일이여 영원하라!"
 bavaria.22.t:0 "프랑스는 우리와 함께 있다"
