--- a/localisation/bav_focus_l_english.yml
+++ b/localisation/bav_focus_l_english.yml
@@ -197,7 +197,7 @@
  BAV_baden:0 "슈바벤 폭동"
  BAV_baden_desc:0 "우리는 독일의 슈바벤 사람들을 다시 통일시켜야 합니다. 바덴-뷔르템베르크의 작은 왕국은 우리의 뜻에 쉽게 굴복해야 합니다."
  BAV_rhine:0 "라인으로의 진군"
- BAV_rhine_desc:0 "우리의 첫 번째 목표 중 하나는 라인 연합이 되어야 합니다. 이 약하디 약한 국가는 우리의 통치 하에서 독일을 통합하기 위해서 반드시 무너져야 합니다."
+ BAV_rhine_desc:0 "우리의 첫 번째 목표 중 하나는 라인 연방이 되어야 합니다. 이 약하디 약한 국가는 우리의 통치 하에서 독일을 통합하기 위해서 반드시 무너져야 합니다."
  BAV_wsm:0 "저지 독일에게 죽음을"
  BAV_wsm_desc:0 "이제 독일 서남부를 장악하고 있으니 관심을 북쪽으로 돌려야 합니다. 이제 저지 독일은 죽음을 맞이할 때입니다!"
  BAV_reunification_category:0 "통일의 길!"
