--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2804,12 +2804,12 @@
  KRW_DEF:0 "갈리치아-로도메리아-부코비나"
  KRW_ADJ:0 "갈리치아"
  
- RHN_neutrality:0 "라인 연합"
- RHN_neutrality_DEF:0 "라인 연합"
- RHN_fascism:0 "라인 연합"
- RHN_fascism_DEF:0 "라인 연합"
- RHN_democratic:0 "라인 연합"
- RHN_democratic_DEF:0 "라인 연합"
+ RHN_neutrality:0 "라인 연방"
+ RHN_neutrality_DEF:0 "라인 연방"
+ RHN_fascism:0 "라인 연방"
+ RHN_fascism_DEF:0 "라인 연방"
+ RHN_democratic:0 "라인 연방"
+ RHN_democratic_DEF:0 "라인 연방"
  RHN_communism:0 "라인 코뮌"
  RHN_communism_DEF:0 "라인 코뮌"
  RHN_neutrality_ADJ:0 "라인"
