--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -31,7 +31,7 @@
  prussia.10004.d:0 "라인란트는 우리와 함께 바이에른의 공산주의자들이라는 공동의 위협에 맞서 싸우겠다는 의지를 표명했습니다. 재통합의 과정은 바로 시작되어야 합니다."
  prussia.10004.a:0 "좋다!"
  prussia.10005.t:0 "라인이 거부하다"
- prussia.10005.d:0 "라인 연합은 통일된 독일국에 다시 함께하라는 우리의 제안을 거절했습니다. 따라서 중부 유럽의 상황을 극도로 복잡하게 만들었습니다. 무슨 수를 써서라도 연방을 확보해야 합니다."
+ prussia.10005.d:0 "라인 연방은 통일된 독일국에 다시 함께하라는 우리의 제안을 거절했습니다. 따라서 중부 유럽의 상황을 극도로 복잡하게 만들었습니다. 무슨 수를 써서라도 연방을 확보해야 합니다."
  prussia.10005.a:0 "그들은 힘에 의해 함께하게 될 것이다!"
  prussia.10021.t:0 "저지 독일의 통합"
  prussia.10021.d:0 "프로이센 외무부는 바이에른 소비에트 공화국의 고조되는 위협으로부터 우리를 보호할 뿐만 아니라 우리를 지원하겠다는 의지를 밝혔습니다. 그들은 우리의 프로이센 통합에 대한 대가로 보안과 방어를 제공할 것입니다."
