--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -11,7 +11,7 @@
  LOADING_TIP_9:0 "내 삶의 목표는 군주제의 전복이다.\n- 카를 리프크네히트"
  LOADING_TIP_10:0 "자본주의에게 전쟁과 평화는 그저 사업에 불과하다.\n- 카를 리프크네히트"
  LOADING_TIP_11:0 "그녀를 허물어 버려라.\n- 베를린 전승기념탑의 꼭대기에 있는 빅토리아에 대해 말하는 에른스트 톨러"
- LOADING_TIP_12:0 "프랑스인들은 정말 모두 겁쟁이다.\n - 라인 연합을 떠나는 프랑스인들에 대해 말하는 에두아르드 다비드"
+ LOADING_TIP_12:0 "프랑스인들은 정말 모두 겁쟁이다.\n - 라인 연방을 떠나는 프랑스인들에 대해 말하는 에두아르드 다비드"
  LOADING_TIP_13:0 "세르비아인들이여, 온 힘을 다해 집과 세르비아 국가를 지켜라!\n- 세르비아 왕국군의 최고 사령관, 섭정 알렉산다르"
  LOADING_TIP_14:0 "나는 내가 믿을 수 없는 사람이라고 생각하지 않는다.\n- 벨러 쿤"
  LOADING_TIP_15:0 "역사에서 배우는 것은 아무도 역사로부터 배우는 것이 없다는 것이다.\n- 오토 폰 합스부르크"
