--- a/localisation/equip_air_l_english.yml
+++ b/localisation/equip_air_l_english.yml
@@ -987,7 +987,7 @@
  FRA_heavy_fighter_equipment_3_short:0 "Bre 700 C2"
  FRA_fighter_equipment_0:0 "뉴포르-들라쥬 NiD 62"
  FRA_fighter_equipment_0_short:0 "NiD 62"
- FRA_fighter_equipment_1:0 "모란-소니에 M.S.406"
+ FRA_fighter_equipment_1:0 "모랑-솔니에 M.S.406"
  FRA_fighter_equipment_1_short:0 "M.S.406"
  FRA_fighter_equipment_2:0 "드와틴 D.520"
  FRA_fighter_equipment_2_short:0 "D.520"
