--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -43,7 +43,7 @@
  armored_car_equipment_1:0 "기본 장갑차"
  armored_car_equipment_1_desc:0 "개선된 내부 배치와 추가적인 탄약고로 보다 효과적인 장갑차가 탄생했습니다."
  armored_car_equipment_2:0 "향상된 장갑차"
- armored_car_equipment_2_desc:0 "전장의 변화는 경보병부대를 물리치고 사라남기 위해 더 무거운 무장과 두꺼운 장갑을 요구했습니다."
+ armored_car_equipment_2_desc:0 "전장의 변화는 경보병부대를 물리치고 살아남기 위해 더 무거운 무장과 두꺼운 장갑을 요구했습니다."
  armored_car_at_equipment:0 "대전차 장갑차"
  armored_car_at_equipment_desc:0 "우리의 경기계화부대는 언젠가 적 전차부대와 접촉하게 될 것입니다. 특별한 대전차 파생 모델을 개발하는 것은 그들에게 싸울 수 있는 기회를 줄 것입니다."
  
